[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/sprites/switches/red/sprite_switches06.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/switches/red/sprite_switches05.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/switches/red/sprite_switches09.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/switches/red/sprite_switches07.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/switches/red/sprite_switches08.png" type="Texture" id=5]
[ext_resource path="res://game/objects/Switch.gd" type="Script" id=6]
[ext_resource path="res://assets/sprites/emotes/sprite_emotes12.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/Switch.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sprites/switches/green/sprite_switches13.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/switches/blue/sprite_switches00.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/switches/blue/sprite_switches03.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/switches/green/sprite_switches10.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/switches/blue/sprite_switches02.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/switches/green/sprite_switches14.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/switches/purple/sprite_switches20.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/switches/purple/sprite_switches21.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/switches/blue/sprite_switches01.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/switches/purple/sprite_switches24.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/switches/green/sprite_switches12.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/switches/blue/sprite_switches04.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/switches/purple/sprite_switches23.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/switches/green/sprite_switches11.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/switches/purple/sprite_switches22.png" type="Texture" id=23]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 20 ) ],
"loop": false,
"name": "blue",
"speed": 8.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 9 ), ExtResource( 14 ) ],
"loop": false,
"name": "green",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 18 ) ],
"loop": false,
"name": "purple",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": false,
"name": "red",
"speed": 8.0
} ]

[node name="Switch" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="InteractPrompt" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )
offset = Vector2( 0, -18 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "blue"
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
